--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,31 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+.adOne-first {
+border-right:solid 1px #a4a4a4;
+
+}
+
+.footer {
+  background: #000000;
+}
+
+.inputy {
+  border: .1rem solid white;
+  background-color: #000000;
+  position: relative;
+  top:.5rem;
+}
+
+.arrow {
+width: 2rem;
+position: absolute;
+bottom: -.2rem;
+left:10rem
+}
+
+.centery {
+  text-align: center;
+}
